# CG-HW

CG_code/cs171-assignment1-Darkgleeman/: README.md
CG_code/cs171-assignment1-Darkgleeman/include/: mesh.h  shader.h
CG_code/cs171-assignment1-Darkgleeman/report/: report.tex
CG_code/cs171-assignment1-Darkgleeman/src/: light_source.fs  lighting_model.fs  main.cpp  mesh.cpp  normal.fs  normal.gs  shader.cpp
CG_code/cs171-assignment2-Darkgleeman/: README.md
CG_code/cs171-assignment3-Darkgleeman/: .clang-format  README.md
CG_code/cs171-assignment4-Darkgleeman/: README.md
CG_code/cs171-assignment5-Darkgleeman/: README.md
CG_code/final-project-team1/: .gitignore  CMakeLists.txt  README.md  r
CG_code/final-project-team1/code/: main.cpp
CG_code/final-project-team1/code/aggregate/: CMakeLists.txt  aggregate.cpp  aggregate.h  aggregates.h  bvh.cpp  bvh.h  embreeAccel.cpp  embreeAccel.h  kdTree.cpp  kdTree.h  primitiveList.cpp  primitiveList.h
CG_code/final-project-team1/code/camera/: CMakeLists.txt  camera.cpp  camera.h  cameras.h
CG_code/final-project-team1/code/distribution/: CMakeLists.txt  distribution.cpp  distribution.h  distributions.h
CG_code/final-project-team1/code/geometry/: CMakeLists.txt  boundingBox.cpp  boundingBox.h  geometrics.h  interaction.cpp  interaction.h  matrix.cpp  matrix.h  quaternion.cpp  quaternion.h  ray.cpp  ray.h  transform.cpp  transform.h  vector.cpp  vector.h
CG_code/final-project-team1/code/integrator/: CMakeLists.txt  directionalSamplerIntegrator.cpp  directionalSamplerIntegrator.h  integrator.cpp  integrator.h  integrators.h  packetSamplerIntegrator.cpp  packetSamplerIntegrator.h  samplerIntegrator.cpp  samplerIntegrator.h  stochasticSamplerIntegrator.cpp  stochasticSamplerIntegrator.h  textureSamplerIntegrator.cpp  textureSamplerIntegrator.h  volumePacketSamplerIntegrator.cpp  volumePacketSamplerIntegrator.h  volumePathSamplerIntegrator.cpp  volumePathSamplerIntegrator.h
CG_code/final-project-team1/code/light/: CMakeLists.txt  areaLights.cpp  areaLights.h  infiniteAreaLight.cpp  infiniteAreaLight.h  light.cpp  light.h  lights.h
CG_code/final-project-team1/code/material/: CMakeLists.txt  bsdf.cpp  bsdf.h  material.cpp  material.h  materials.h
CG_code/final-project-team1/code/medium/: CMakeLists.txt  densityMedium.cpp  densityMedium.h  medium.cpp  medium.h  mediums.h  volume.cpp  volume.h
CG_code/final-project-team1/code/primitive/: CMakeLists.txt  geometricPrimitive.cpp  geometricPrimitive.h  primitive.cpp  primitive.h  primitives.h
CG_code/final-project-team1/code/sampler/: CMakeLists.txt  randomSampler.cpp  randomSampler.h  sampler.cpp  sampler.h  samplers.h
CG_code/final-project-team1/code/scattering/: CMakeLists.txt  bxdf.cpp  bxdf.h  bxdfs.h  fresnelSpecular.cpp  fresnelSpecular.h  lambertianReflection.cpp  lambertianReflection.h  microfacet.cpp  microfacet.h  microfacetReflection.cpp  microfacetReflection.h  phongReflection.cpp  phongReflection.h  specularReflection.cpp  specularReflection.h  specularTransmission.cpp  specularTransmission.h
CG_code/final-project-team1/code/scene/: CMakeLists.txt  scene.cpp  scene.h  scenes.h
CG_code/final-project-team1/code/shape/: CMakeLists.txt  bitGridAccelMesh.cpp  bitGridAccelMesh.h  cube.cpp  cube.h  gridAccelMesh.cpp  gridAccelMesh.h  mesh.cpp  mesh.h  plane.cpp  plane.h  shape.cpp  shape.h  shapes.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
CG_code/final-project-team1/code/spectrum/: CMakeLists.txt  RGBSpectrum.cpp  RGBSpectrum.h  coefficientSpectrum.h  spectrums.h
CG_code/final-project-team1/code/texture/: CMakeLists.txt  texture.cpp  texture.h  textures.h
CG_code/final-project-team1/code/utils/: utils.cpp  utils.h
CG_code/final-project-team1/report/: final report.tex  report.tex  report_part2.tex
CG_code/warm-up-Darkgleeman/: CMakeLists.txt  README.md
CG_code/warm-up-Darkgleeman/report/: report.tex
CG_code/warm-up-Darkgleeman/src/: main.cpp
(+39 files in other folders)
